tests/macros/select/plugin.stderr
error: option `plugin` does not exist for kind `select`
 --> $DIR/plugin.rs:2:46
  |
2 |     let q = inquisition::questions![Select { plugin: todo!() }];
  |                                              ^^^^^^
