tests/macros/select/plugin.rs
fn main() {
    let q = inquisition::questions![Select { plugin: todo!() }];
}
